<resources>
    <string name="app_name">B-Project</string>
    <string name="server_url">http://192.168.0.20:3000</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="publication_date">Publication Date</string>
    <string name="description">Description</string>
    <string name="tags">Tags</string>
    <string name="textview">TextView</string>
    <string name="author_name">Author name</string>
    <string name="tag_book">Tag book</string>
    <string name="add_book">Add Book</string>
    <string name="plus">+</string>
</resources>
