<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andrei.b_project.views.SingleBookActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="29dp"
            android:text="@string/title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/authorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/titleTextView"
            android:layout_below="@+id/titleTextView"
            android:layout_marginTop="39dp"
            android:text="@string/author"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/publicationDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/authorTextView"
            android:layout_below="@+id/authorTextView"
            android:layout_marginTop="34dp"
            android:text="@string/publication_date"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/descriptionTextField"
            android:layout_alignStart="@+id/publicationDateTextView"
            android:text="@string/description"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tagsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tagsView"
            android:layout_alignStart="@+id/descriptionTextView"
            android:text="@string/tags" />

        <EditText
            android:id="@+id/titleTextField"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/titleTextView"
            android:layout_alignParentEnd="true"
            android:editable="false"
            android:ems="10"
            android:focusable="false" />

        <EditText
            android:id="@+id/authorTextField"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/publicationDateTextView"
            android:layout_alignParentEnd="true"
            android:editable="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/publicationDateTextField"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/authorTextField"
            android:layout_marginTop="21dp"
            android:editable="false"
            android:ems="10"
            android:focusable="false" />

        <EditText
            android:id="@+id/descriptionTextField"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/publicationDateTextField"
            android:layout_marginTop="19dp"
            android:editable="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:scrollbars="vertical"
            android:textSize="12sp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/titleTextView" />

        <ListView
            android:id="@+id/tagsView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_above="@+id/ratingBar"
            android:layout_alignStart="@+id/descriptionTextField"
            android:layout_marginBottom="30dp"
            android:scrollbars="vertical" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
